# tutorial-graphql-ariadne

./: app.py  pyproject.toml  schema.graphql
api/: __init__.py  models.py  queries.py
tests/: test_tutorial_graphql_ariadne.py
