[tool.poetry]
name = "tutorial-graphql-ariadne"
version = "0.1.0"
description = ""
authors = ["Rapaix <rafaelpx8812@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
ariadne = "^0.13.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
